--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@types/chart.js": "^2.9.41",
+    "chart.js": "^4.4.7",
+    "lucide-react": "^0.473.0",
     "next": "15.1.5",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
